# y-fast

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cython/: setup.py  tests.py  tests.pyx  xfast.pxd
doc/: doxygen.cfg
doc/html/: aligned_8h_source.html  annotated.html  annotated_dup.js  bit__extractor_8h_source.html  class_hash.html  classes.html  classyfast_1_1fastmap-members.html  classyfast_1_1fastmap.html  classyfast_1_1fastmap.js  classyfast_1_1fastmap_1_1const__iterator-members.html  classyfast_1_1fastmap_1_1const__iterator.html  classyfast_1_1fastmap_1_1const__reverse__iterator-members.html  classyfast_1_1fastmap_1_1const__reverse__iterator.html  classyfast_1_1fastmap_1_1iterator-members.html  classyfast_1_1fastmap_1_1iterator.html  classyfast_1_1fastmap_1_1reverse__iterator-members.html  classyfast_1_1fastmap_1_1reverse__iterator.html  classyfast_1_1impl_1_1_a_v_l-members.html  classyfast_1_1impl_1_1_a_v_l.html  classyfast_1_1impl_1_1_b_s_t-members.html  classyfast_1_1impl_1_1_b_s_t.html  classyfast_1_1impl_1_1_bit_extractor.html  classyfast_1_1impl_1_1_bit_extractor_3_01_key_00_01std_1_1enable__if__t_3_01std_1_1is__integral__v_3_01_key_01_4_01_4_01_4.html  classyfast_1_1impl_1_1_bit_extractor_3_01_key_00_01std_1_1enable__if__t_3_01std_1_1is__integral_a2b76903baff75382260ede3f4c24a19.html  classyfast_1_1impl_1_1_bit_extractor_3_01std_1_1string_01_4-members.html  classyfast_1_1impl_1_1_bit_extractor_3_01std_1_1string_01_4.html  classyfast_1_1impl_1_1_bit_extractor_3_01std_1_1vector_3_01std_1_1byte_01_4_01_4-members.html  classyfast_1_1impl_1_1_bit_extractor_3_01std_1_1vector_3_01std_1_1byte_01_4_01_4.html  classyfast_1_1impl_1_1_lex_compare-members.html  classyfast_1_1impl_1_1_lex_compare.html  classyfast_1_1impl_1_1_x_fast_trie-members.html  classyfast_1_1impl_1_1_x_fast_trie.html  classyfast_1_1impl_1_1_y_fast_trie-members.html  classyfast_1_1impl_1_1_y_fast_trie.html  classyfast_1_1impl_1_1_y_fast_trie.js  concepts.html  concepts_8h_source.html  conceptyfast_1_1internal_1_1_bit_extractor_generic.html  conceptyfast_1_1internal_1_1_map_generic.html  debug_8h_source.html  (+69 more)
docs/: doxygen.cfg  footer_awesome.html
docs/html/: aligned_8h_source.html  annotated.html  annotated_dup.js  bit__extractor_8h_source.html  class_bit_extractor.html  class_hash.html  classes.html  classyfast_1_1fastmap-members.html  classyfast_1_1fastmap.html  classyfast_1_1fastmap.js  classyfast_1_1fastmap_1_1const__iterator-members.html  classyfast_1_1fastmap_1_1const__iterator.html  classyfast_1_1fastmap_1_1const__iterator.js  classyfast_1_1fastmap_1_1const__reverse__iterator-members.html  classyfast_1_1fastmap_1_1const__reverse__iterator.html  classyfast_1_1fastmap_1_1iterator-members.html  classyfast_1_1fastmap_1_1iterator.html  classyfast_1_1fastmap_1_1iterator.js  classyfast_1_1fastmap_1_1reverse__iterator-members.html  classyfast_1_1fastmap_1_1reverse__iterator.html  classyfast_1_1impl_1_1_a_v_l-members.html  classyfast_1_1impl_1_1_a_v_l.html  classyfast_1_1impl_1_1_a_v_l.js  (+108 more)
examples/: yfast_example.cpp
include/yfast/: fastmap.h  (+2 more)
src/: avl.h  bst.h  trie.h  xfast.h  yfast.h
test/: benchmark.cpp
(+98 files in other folders)
